<resources>
    <string name="app_name">Story Apps</string>
    <string name="login_description">Hi! welcome to Story App</string>
    <string name="iconLogin">Only a decorative icon for login</string>
    <string name="iconRegister">Only a decorative icon for register</string>
    <string name="registerDescription">Please enter your account information</string>
    <string name="storySplash">Come on share your story!</string>
    <string name="bottomSplash">Created by A Rizki Awan</string>
    <string name="createAccount">Create Account</string>
    <string name="btnFloating">to create new content</string>
    <string name="changeLanguage">Change Language</string>
    <string name="home">Home</string>
    <string name="scrollView">For scrolling item</string>
    <string name="detail_title">%1$s\'s Story</string>
    <string name="post_as">Share story as </string>
    <string name="post_users">Create new story</string>
    <string name="message">Message  :</string>
    <string name="cameraChoose">Camera</string>
    <string name="galleryChoose">Gallery</string>
    <string name="descriptionStory">Type your story</string>
    <string name="storyImageDesc">Story Image Desc</string>
    <string name="btnPost">Upload Story</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="nameUser">Name</string>
    <string name="timeCreatedContent">Januari 12, 2024, 12:18:54</string>
    <string name="content">This image is part of the story</string>
    <string name="email">Enter your email</string>
    <string name="emailFormatWrong">Wrong email format</string>
    <string name="emailTaken">The email you entered is already registered, please change your email</string>
    <string name="password">Enter your password</string>
    <string name="passwordConfirm">Confirm your password</string>
    <string name="passwordVisible">Show Password</string>
    <string name="passwordLess">Password min 8 characters</string>
    <string name="passwordNotMatch">Passwords don\'t match</string>
    <string name="tvLogin">Login</string>
    <string name="login_button">Login</string>
    <string name="invalidLogin">Enter your account data correctly!</string>
    <string name="registerHeader">Register Account</string>
    <string name="register">Don\'t have an account?</string>
    <string name="register_button">Register</string>
    <string name="registerCreate">Create Account</string>
    <string name="nameNone">Name cannot be empty</string>
    <string name="emailNone">Email cannot be empty</string>
    <string name="passwordNone">Password cannot be empty</string>
    <string name="passwordConfirmNone">Confirm password cannot be empty</string>
    <string name="name">Enter your name</string>
    <string name="logout">Log Out</string>
    <string name="logoutDescription">Are you sure you want to log out?</string>
    <string name="SuccessLogout">Logged out successfully</string>
    <string name="cancelLogout">Cancel</string>
    <string name="imageStoryDesc">This contains images from the story</string>
    <string name="dateStory">Story created on:</string>
    <string name="package_name">com.rizki.submissionandroidintermediate</string>
    <string name="imageSplashDesc">This is the Bangkit logo on the splash screen</string>
    <string name="warningAddImage">Upload photos first</string>
    <string name="warningAddDescription">Add a description first</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">See Maps</string>
    <string name="standardMap">Standard Map</string>
    <string name="nightMap">Night Map</string>
    <string name="useMyLocation">Use my location</string>
    <string name="usePickLocation">Use the location that i pick</string>
    <string name="pickLocation">Click map to pick location</string>
    <string name="icon_map_pin">Icon map pin</string>
    <string name="yourLocation">Your Location</string>
    <string name="start_point">Start Point</string>
    <string name="accountSuccessCreated">Yeayy account successfully created</string>
    <string name="tryAgain">Try Again</string>
    <string name="locationNotFound">Location is not found. Try Again</string>
    <string name="useThisLocation">Use this location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>