<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userinterface.HomePageActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_stories"
        style="@style/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/story_item_row" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFloating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:backgroundTint="@color/button"
        android:contentDescription="@string/btnFloating"
        android:src="@drawable/baseline_add_24"
        app:borderWidth="0dp"
        app:elevation="7dp"
        app:fabCustomSize="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="40dp"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>